--- a/starter/app/src/main/res/xml/content_detail_scene.xml
+++ b/starter/app/src/main/res/xml/content_detail_scene.xml
@@ -6,27 +6,23 @@
         app:autoTransition="animateToEnd"
         app:constraintSetEnd="@+id/end"
         app:constraintSetStart="@+id/start"
-        app:duration="3000" />
+        app:duration="1500" />
 
     <ConstraintSet android:id="@+id/start">
 
         <Constraint
-            android:id="@+id/status_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0"
-            app:layout_constraintStart_toEndOf="@+id/button_ok"
-            app:layout_constraintTop_toTopOf="@+id/button_ok" />
+            android:id="@+id/detail_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
 
         <Constraint
-            android:id="@+id/status_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="1"
-            app:layout_constraintStart_toStartOf="@+id/file_name_text"
-            app:layout_constraintTop_toTopOf="@+id/status_label" />
+            android:id="@+id/detail_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="1" />
     </ConstraintSet>
 </MotionScene>
